- Minor changes / cleanup.